# mcp

./: .gitignore  main.py  pyproject.toml  system.md
server/: company.db  db_initializer.py  main.py
server/fetch/: main.py  pyproject.toml
server/fetch/src/mcp_server_fetch/: __init__.py
