[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.400",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.6.0",
    "openai>=1.72.0",
    "protego>=0.4.0",
    "python-dotenv>=1.1.0",
    "readabilipy>=0.3.0",
]

[tool.uv.workspace]
members = ["server/*"]
